--- a/src/Pages/Header/Header.css
+++ b/src/Pages/Header/Header.css
@@ -97,7 +97,7 @@
 
 .navbar .info .btn {
   padding: 6px 10px;
-  margin: 0px 5px;
+  margin: 0px 0px;
   border: none;
   background: none;
   color: white;
@@ -109,6 +109,8 @@
 @media screen and (max-width: 600px) {
   .navbar .info .btn {
     font-size: 1rem;
+    width: 100px;
+    font-size: .8rem;
   }
 }
 
@@ -120,7 +122,9 @@
 
 @media screen and (max-width: 600px) {
   .navbar .info .btn-red {
-    margin-right: 20px;
+    width: 100px;
+    margin-right: 10px;
+    font-size: .8rem;
   }
 }
 
