--- a/src/Pages/Header/Header.scss
+++ b/src/Pages/Header/Header.scss
@@ -69,7 +69,7 @@
         
         .btn{
             padding: 6px 10px;
-            margin: 0px 5px;
+            margin: 0px 0px;
             border: none;
             background: none;
             color: white;
@@ -78,14 +78,19 @@
             cursor: pointer;
             @media screen and (max-width: 600px) {
               font-size: 1rem;
-             }
-       }
-        .btn-red{
-          background: rgb(199, 22, 22);
-          transition: all .3s ease;
+              width: 100px;
+              font-size: .8rem;
 
-          @media screen and (max-width: 600px) {
-              margin-right: 20px;
+            }
+        }
+        .btn-red{
+            background: rgb(199, 22, 22);
+            transition: all .3s ease;
+            
+            @media screen and (max-width: 600px) {
+                width: 100px;
+                margin-right: 10px;
+                font-size: .8rem;
            }
 
           &:hover{
